# onion-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.py
docs/: http-implementation.md  http-module.md  json-module.md  language-spec.typ
examples/: adventure_game.onion  ascii_art.onion  async.onion  combinators_test.onion  constraint_test.onion  conway_life.onion  enum_test.onion  error.onion  fib.onion  fireworks.onion  hello.onion  http_demo.onion  http_simple.onion  http_sync_test.onion  io_test.onion  lazy_set.onion  macro.onion  mandelbrot.onion  map.onion  marco test.onion  marco_test.onion  math visualizer.onion  math_visualizer.onion  module.onion  mut.onion  prototype.onion  result test.onion  result_test.onion  speed_test.onion  std test.onion  stdlib_test.onion  test.onion  test_new_stdlib.onion  time_simple_test.onion  time_test.onion
examples/core/: core.onion  prototype.onion
examples/import_test/: import_test.onion  types.onion
examples/lang_test/: async.onion  capture.onion  church.onion  comptime.onion  const_test.onion  constrained_args.onion  crazy_async.onion  dynamic function.onion  ffi_demo.onion  ffi_windows.onion  fib.onion  heavy_function_call.onion  hello.onion  http.onion  http_demo.onion  http_simple.onion  http_sync_test.onion  http_test.onion  import.onion  io_test.onion  json_advanced.onion  json_simple_advanced.onion  json_test.onion  lambda.onion  lazy_set.onion  macro.onion  macro_and_comptime.onion  map.onion  mut.onion  pgo_optimize.onion  prototype.onion  stdlib_simple_test.onion  sub_module.onion  test_new_stdlib.onion  test_stdlib.onion  thread.onion  time_test.onion
examples/lang_test/benchmark/: fib.onion  heavy_function_call.onion  pgo_optimize.onion
examples/lang_test/cocurrency/: async.onion  thread.onion
examples/lang_test/comptime/: macro and comptime.onion  sub module.onion
examples/lang_test/import/: import.onion  module.onion
examples/lang_test/lambda/: capture.onion  church.onion  constrained args.onion  definition and call.onion  self.onion
examples/lang_test/mutability/: mut.onion
examples/lang_test/prototype/: prototype.onion
examples/lang_test/stdlib/: ffi_demo.onion  ffi_windows.onion  http_demo.onion  http_simple.onion  io_test.onion  json_advanced.onion  json_test.onion  test_stdlib.onion  time_test.onion
examples/lang_test/types/: const_test.onion  lazy set.onion  map.onion
examples/std/: combinators.onion  constraint.onion  enum.onion  logging.onion  marcos.onion  option.onion  parallel.onion  prototype.onion  result.onion  test_framework.onion  tui_colors.onion
examples/stdlib/: stdlib.onion
onion-frontend/: Cargo.toml  README.md
onion-frontend/src/: compile.rs  dir_stack.rs  lib.rs
onion-frontend/src/diagnostics/: collector.rs  mod.rs
onion-frontend/src/ir_generator/: ir_generator.rs  mod.rs
onion-frontend/src/parser/: analyzer.rs  ast.rs  diagnostics.rs  lexer.rs  mod.rs
onion-frontend/src/parser/comptime/: ast_bindings.rs  mod.rs  native.rs  solver.rs
onion-frontend/src/utils/: cycle_detector.rs  mod.rs
onion-vm/: Cargo.toml  README.md
onion-vm/src/: lib.rs
onion-vm/src/lambda/: mod.rs  runnable.rs
onion-vm/src/lambda/scheduler/: async_scheduler.rs  map.rs  map_scheduler.rs  mod.rs  scheduler.rs
onion-vm/src/types/: async_handle.rs  lazy_set.rs  mod.rs  named.rs  object.rs  object_test.rs  pair.rs  thread_handle.rs  tuple.rs
onion-vm/src/types/lambda/: context.rs  definition.rs  launcher.rs  mod.rs  native.rs  parameter.rs  runnable.rs
onion-vm/src/types/lambda/vm_instructions/: instruction_set.rs  ir.rs  ir_translator.rs  mod.rs  opcode.rs
onion-vm/src/util/: mod.rs
onion-vm/src/utils/: fastmap.rs  mod.rs
src/: main.rs  repl.rs
src/lsp/: capabilities.rs  diagnostics.rs  document.rs  mod.rs  protocol.rs  semantic.rs  server.rs
src/repl/: executor.rs  mod.rs
src/stdlib/: bytes.rs  fs.rs  http.rs  io.rs  json.rs  math.rs  mod.rs  os.rs  string.rs  sys.rs  time.rs  tuple.rs  types.rs
src/stdlib/ffi/: ctypes.rs  lib.rs  mem.rs  mod.rs
