[package]
name = "onion-lang"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "onion"
path = "src/main.rs"

[dependencies]
onion-frontend = { version = "0.1.0", path = "./onion-frontend" }
onion-vm = { version = "0.1.0", path = "./onion-vm" }
serde = "1.0.219"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
rustyline = { version = "14.0", features = ["derive"] }
dirs = "5.0"
log = "0.4.27"
serde_json = "1.0.140"
url = "2.5.4"
env_logger = "0.11.8"
regex = "1.11.1"

[workspace]
members = [
    "onion-vm",
    "onion-frontend",
]

[profile.release]
debug = 1
opt-level = 3
