[package]
name = "onion-frontend"
version = "0.3.0"
edition = "2024"
authors = ["sjrsjz <sjrsjz@gmail.com>"]
description = "Compilation frontend for the Onion programming language - lexer, parser, and IR generator"
homepage = "https://github.com/sjrsjz/onion-lang"
repository = "https://github.com/sjrsjz/onion-lang"
documentation = "https://github.com/sjrsjz/onion-lang/blob/main/onion-frontend/README.md"
readme = "README.md"
license = "MIT"
keywords = ["compiler", "parser", "lexer", "frontend", "onion"]
categories = ["development-tools", "compilers"]
rust-version = "1.85.0"

[features]
default = ["debug"]
debug = ["colored"]

[lib]
name = "onion_frontend"
crate-type = ["lib"]

[dependencies]
base64 = "0.22.1"
colored = { workspace = true, optional = true }
once_cell = "1.21.3"
onion-vm = { version = "0.3.0", path = "../onion-vm" }
regex = "1.11.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"

[dev-dependencies]
criterion = { workspace = true }
