[package]
name = "onion-vm"
version = "0.1.8"
edition = "2021"
authors = ["sjrsjz <sjrsjz@gmail.com>"]
description = "Virtual machine runtime for the Onion programming language with async execution and garbage collection"
homepage = "https://github.com/sjrsjz/onion-lang"
repository = "https://github.com/sjrsjz/onion-lang"
documentation = "https://github.com/sjrsjz/onion-lang/blob/main/onion-vm/README.md"
readme = "README.md"
license = "MIT"
keywords = ["virtual-machine", "runtime", "async", "gc", "onion"]
categories = ["development-tools", "compilers"]
rust-version = "1.70"

[features]
default = ["serde_support"]
debug = []
serde_support = ["serde"]

[lib]
name = "onion_vm"
crate-type = ["lib"]

[dependencies]
base64 = "0.22"
bincode = "1.3.3"
rust-arc-gc = "0.2.0"
rustc-hash = "2.1.1"
serde = { workspace = true, optional = true }
serde_json = "1.0.140"

[dev-dependencies]
criterion = { workspace = true }
